# nav-updater

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  auth.py  catalog.py  config.py  db.py  main.py  meetings.py  models.py  monitoring.py  quality.py  time.py
app/domain/: matching.py  metrics.py  types.py
app/excel/: __init__.py  template_adapter.py
app/jobs/: __init__.py  processor.py  regression_worker.py  review.py  service.py  worker.py
app/ocr/: __init__.py  benchmark.py  engine.py  evidence.py  paddle.py  regression.py  table_parser.py
app/providers/: public_fund.py
app/static/: app.css
app/templates/: admin_users.html  base.html  catalog.html  login.html  meeting_detail.html  meetings.html  monitoring.html  new_update.html  preview.html  quality.html  review.html  updates.html
benchmarks/ocr/: README.md  labels.example.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_meetings.py  0003_allow_deleted_user_history.py  0004_add_ocr_review_samples.py  0005_correct_china_times.py  0006_add_ocr_regression_loop.py  0007_single_active_ocr_regression_run.py
scripts/: backup.sh  restore.sh  run_ocr_benchmark.py
tests/: test_dockerfile.py  test_health.py  test_login_layout.py  test_migrations.py  test_workflow_layout.py
tests/e2e/: test_lan_flow.py
tests/fixtures/: eastmoney_response.json  net_value_template.xlsx  ocr_tokens.json
tests/integration/: test_jobs.py  test_meeting_import.py  test_provider.py
(+45 files in other folders)
