[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-updater"
version = "0.1.0"
description = "LAN net-value update tool for investment research workbooks"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "lxml>=5.3,<7",
  "numpy>=2.1,<3",
  "openpyxl>=3.1,<4",
  "opencv-python-headless>=4.10,<5",
  "pillow>=11,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "python-multipart>=0.0.20,<1",
  "rapidocr_onnxruntime>=1.4,<2",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.49,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
